# Math-Modelling-of-Natural-Sciences

./: pyproject.toml
lab2/: main.py  simulator.py  sor.py
lab4/: generate_knapsack.py  greedy.py  main_TSP.py  main_knapsack.py  simulated_annealing.py
lab4/output/: results.csv
